--- a/VirtualUniverse/bin/html/css/datepick.css
+++ b/VirtualUniverse/bin/html/css/datepick.css
@@ -1,4 +1,6 @@
-/* Redmond style sheet for jQuery Datepicker v5.0.1. */
+/* Redmond style sheet for jQuery Datepicker v5.0.1.
+Updated for Virtual Universe - NoahStarfinder - March 2017
+*/
 .datepick {
 	background-color: #fff;
 	color: #222;
